Fix overflow bug

--- a/src/assets/css/_header.css
+++ b/src/assets/css/_header.css
@@ -10,7 +10,7 @@ header.main {
   margin: 0;
   padding: 0;
   font-family: var(--sans);
-  font-size: clamp(2rem, 9vw, var(--font-size-plus-8));
+  font-size: clamp(1.2rem, 9vw, var(--font-size-plus-8));
   font-weight: 900;
 }
 
